--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,14 @@ button {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
+
+
+
+h2 {
+  background: linear-gradient(to right, #9E0000, #9E0000 , #08259D, #08259D , #158B02,#158B02, #E8C61C, #E8C61C);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black
+}
+
