--- a/src/views/design/ChatBox.css
+++ b/src/views/design/ChatBox.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
     height: 100%;
     width: 100%;
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
+} */
 ::-webkit-scrollbar {
     width: 4px;
 }
@@ -21,7 +21,7 @@ body {
     border-radius: 2px;
 }
 .chatbox {
-    width: 300px;
+    width: 500px;
     height: 400px;
     max-height: 400px;
     display: flex;
@@ -32,15 +32,15 @@ body {
 .chat-window {
     flex: auto;
     max-height: calc(100% - 60px);
-    background: #2f323b;
+    background: #ffffff;
     overflow: auto;
 }
 .chat-input {
     flex: 0 0 auto;
     height: 60px;
-    background: #40434e;
+    background: #1064ff;
     border-top: 1px solid #2671ff;
-    box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14),0 4px 8px rgba(0,0,0,.28);
 }
 .chat-input input {
     height: 59px;
@@ -48,11 +48,11 @@ body {
     outline: 0 none;
     border: none;
     width: calc(100% - 60px);
-    color: white;
+    color: rgb(0, 0, 0);
     text-indent: 10px;
     font-size: 12pt;
     padding: 0;
-    background: #40434e;
+    background: #dbdbdb;
 }
 .chat-input button {
     float: right;
