--- a/src/views/design/ChatBox.css
+++ b/src/views/design/ChatBox.css
@@ -38,7 +38,7 @@ body {
 .chat-input {
     flex: 0 0 auto;
     height: 60px;
-    background: #1064ff;
+    background: #F6F2E9;
     border-top: 1px solid #2671ff;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.14),0 4px 8px rgba(0,0,0,.28);
 }
@@ -47,25 +47,14 @@ body {
     line-height: 60px;
     outline: 0 none;
     border: none;
-    width: calc(100% - 60px);
+    width: calc(100% - 20px);
     color: rgb(0, 0, 0);
     text-indent: 10px;
     font-size: 12pt;
     padding: 0;
     background: #F6F2E9;
 }
-.chat-input button {
-    float: right;
-    outline: 0 none;
-    border: none;
-    background: rgba(255,255,255,.25);
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    padding: 2px 0 0 0;
-    margin: 10px;
-    transition: all 0.15s ease-in-out;
-}
+
 .chat-input input[good] + button {
     box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 4px rgba(0,0,0,.24);
     background: #2671ff;
@@ -86,7 +75,7 @@ body {
 .msg-box {
     display: flex;
     background: #3661d8;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 20px;
     margin: 10px;
     border-radius: 10px 10px 10px 10px;
     max-width: 80%;
@@ -112,10 +101,11 @@ body {
     flex: 1 0 auto;
 }
 .msg {
+    font-weight: 500;
     display: inline-block;
     font-size: 11pt;
     line-height: 13pt;
-    color: rgba(255,255,255,.7);
+    color: rgba(255, 255, 255);
     margin: 0 0 4px 0;
 }
 .msg:first-of-type {
@@ -128,11 +118,12 @@ body {
     margin-left: 20px;
 }
 .username {
+    font-weight: 500;
+    font-size: 8pt;
     color: white;
     margin-right: 6px;
     margin-left: 6px;
-    position: absolute;
-    left: 22px;
+    left: -55px;
     bottom: 15px;
 }
 .posttime {
